# autoframe

./: .gitignore  .pre-commit-config.yaml  CI.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  TESTING.md  docker-compose.test.yml  example_auth.py  in_flight.md  mkdocs.yml  pixi.toml  pyproject.toml
.github/workflows/: ci.yml  dev-tools.yml  release.yml  security.yml
autoframe/: __init__.py  auth.py  config.py  logging.py  mongodb.py  pipeline.py  quality.py  types.py
autoframe/frames/: __init__.py  core.py
autoframe/quality/: __init__.py  reports.py
autoframe/sources/: __init__.py  base.py  mongodb.py  simple.py
autoframe/utils/: __init__.py  functional.py  retry.py
docs/: authentication.md  concepts.md  data-sources.md  examples.md  functional-api.md  index.md  installation.md  pipeline.md  quality.md  quickstart.md
docs/api/: auth.md  functional.md  index.md  pipeline.md  quality.md  sources.md  types.md
scripts/: test-db.sh  test_db.py
test-data/: analytics.yaml  indexes.yaml  init-mongo.js  init_mongodb.py  orders.yaml  products.yaml  users.yaml
tests/: __init__.py  test_basic.py  test_functional.py
tests/frames/: __init__.py
tests/integration/: test_mongodb_integration.py
tests/quality/: __init__.py
tests/sources/: __init__.py
tests/unit/: test_auth.py  test_basic.py  test_config_simple.py  test_functional.py  test_logging_simple.py  test_mongodb_auth.py  test_mongodb_mocked.py  test_retry.py
